Location controller with get location method The method is only calculating the floor ID as or right now. It also need to be more tested
